# gen/pb_python/flyteidl/service/flyteadmin/flyteadmin/models/__init__.py
@@ -198,10 +198,11 @@ from flyteadmin.models.core_workflow_metadata_defaults import CoreWorkflowMetada
 from flyteadmin.models.core_workflow_node import CoreWorkflowNode
 from flyteadmin.models.core_workflow_template import CoreWorkflowTemplate
 from flyteadmin.models.data_loading_config_literal_map_format import DataLoadingConfigLiteralMapFormat
-from flyteadmin.models.event_managed_resource_info import EventManagedResourceInfo
 from flyteadmin.models.event_node_execution_event import EventNodeExecutionEvent
 from flyteadmin.models.event_parent_node_execution_metadata import EventParentNodeExecutionMetadata
 from flyteadmin.models.event_parent_task_execution_metadata import EventParentTaskExecutionMetadata
+from flyteadmin.models.event_resource_identifiers import EventResourceIdentifiers
+from flyteadmin.models.event_resource_pool_info import EventResourcePoolInfo
 from flyteadmin.models.event_task_execution_event import EventTaskExecutionEvent
 from flyteadmin.models.event_task_execution_metadata import EventTaskExecutionMetadata
 from flyteadmin.models.event_workflow_execution_event import EventWorkflowExecutionEvent
