# gen/pb_python/flyteidl/service/flyteadmin/flyteadmin/models/event_resource_identifiers.py
@@ -17,7 +17,7 @@ import re  # noqa: F401
 import six
 
 
-class EventManagedResourceInfo(object):
+class EventResourceIdentifiers(object):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -31,72 +31,72 @@ class EventManagedResourceInfo(object):
                             and the value is json key in definition.
     """
     swagger_types = {
-        'allocation_token': 'str',
-        'namespace': 'str'
+        'generated_name': 'str',
+        'external_ids': 'list[str]'
     }
 
     attribute_map = {
-        'allocation_token': 'allocation_token',
-        'namespace': 'namespace'
+        'generated_name': 'generated_name',
+        'external_ids': 'external_ids'
     }
 
-    def __init__(self, allocation_token=None, namespace=None):  # noqa: E501
-        """EventManagedResourceInfo - a model defined in Swagger"""  # noqa: E501
+    def __init__(self, generated_name=None, external_ids=None):  # noqa: E501
+        """EventResourceIdentifiers - a model defined in Swagger"""  # noqa: E501
 
-        self._allocation_token = None
-        self._namespace = None
+        self._generated_name = None
+        self._external_ids = None
         self.discriminator = None
 
-        if allocation_token is not None:
-            self.allocation_token = allocation_token
-        if namespace is not None:
-            self.namespace = namespace
+        if generated_name is not None:
+            self.generated_name = generated_name
+        if external_ids is not None:
+            self.external_ids = external_ids
 
     @property
-    def allocation_token(self):
-        """Gets the allocation_token of this EventManagedResourceInfo.  # noqa: E501
+    def generated_name(self):
+        """Gets the generated_name of this EventResourceIdentifiers.  # noqa: E501
 
-        Unique resource ID used to identify this execution when allocating a token.  # noqa: E501
+        Unique, generated name for this task execution used by the backend.  # noqa: E501
 
-        :return: The allocation_token of this EventManagedResourceInfo.  # noqa: E501
+        :return: The generated_name of this EventResourceIdentifiers.  # noqa: E501
         :rtype: str
         """
-        return self._allocation_token
+        return self._generated_name
 
-    @allocation_token.setter
-    def allocation_token(self, allocation_token):
-        """Sets the allocation_token of this EventManagedResourceInfo.
+    @generated_name.setter
+    def generated_name(self, generated_name):
+        """Sets the generated_name of this EventResourceIdentifiers.
 
-        Unique resource ID used to identify this execution when allocating a token.  # noqa: E501
+        Unique, generated name for this task execution used by the backend.  # noqa: E501
 
-        :param allocation_token: The allocation_token of this EventManagedResourceInfo.  # noqa: E501
+        :param generated_name: The generated_name of this EventResourceIdentifiers.  # noqa: E501
         :type: str
         """
 
-        self._allocation_token = allocation_token
+        self._generated_name = generated_name
 
     @property
-    def namespace(self):
-        """Gets the namespace of this EventManagedResourceInfo.  # noqa: E501
+    def external_ids(self):
+        """Gets the external_ids of this EventResourceIdentifiers.  # noqa: E501
 
-        Namespace under which this task execution requested an allocation token.  # noqa: E501
+        Identifiers for external resources created by this task execution, for exaple Qubole query ID or presto query ids.  # noqa: E501
 
-        :return: The namespace of this EventManagedResourceInfo.  # noqa: E501
-        :rtype: str
+        :return: The external_ids of this EventResourceIdentifiers.  # noqa: E501
+        :rtype: list[str]
         """
-        return self._namespace
+        return self._external_ids
 
-    @namespace.setter
-    def namespace(self, namespace):
-        """Sets the namespace of this EventManagedResourceInfo.
+    @external_ids.setter
+    def external_ids(self, external_ids):
+        """Sets the external_ids of this EventResourceIdentifiers.
 
-        Namespace under which this task execution requested an allocation token.  # noqa: E501
+        Identifiers for external resources created by this task execution, for exaple Qubole query ID or presto query ids.  # noqa: E501
 
-        :param namespace: The namespace of this EventManagedResourceInfo.  # noqa: E501
-        :type: str
+        :param external_ids: The external_ids of this EventResourceIdentifiers.  # noqa: E501
+        :type: list[str]
         """
 
-        self._namespace = namespace
+        self._external_ids = external_ids
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -119,7 +119,7 @@ class EventManagedResourceInfo(object):
                 ))
             else:
                 result[attr] = value
-        if issubclass(EventManagedResourceInfo, dict):
+        if issubclass(EventResourceIdentifiers, dict):
             for key, value in self.items():
                 result[key] = value
 
@@ -135,7 +135,7 @@ class EventManagedResourceInfo(object):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, EventManagedResourceInfo):
+        if not isinstance(other, EventResourceIdentifiers):
             return False
 
         return self.__dict__ == other.__dict__
